--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@workspace/ui": "workspace:*",
+    "appwrite": "^19.0.0",
     "class-variance-authority": "^0.7.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
@@ -51,11 +52,13 @@
     "react-day-picker": "^9.9.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
+    "react-icons": "^5.5.0",
     "react-resizable-panels": "^3.0.5",
     "recharts": "2.15.4",
     "sonner": "^2.0.7",
     "vaul": "^1.1.2",
-    "zod": "^4.1.5"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/node": "^20.19.9",
