--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -18,9 +18,13 @@
   "dependencies": {
     "@clerk/express": "^1.7.26",
     "@prisma/client": "^6.15.0",
+    "@types/node-cron": "^3.0.11",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "hono": "^4.9.5",
+    "node-appwrite": "^18.0.0",
+    "node-cron": "^4.2.1",
     "prisma": "^6.15.0",
     "zod": "^4.1.5"
   }
