--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,6 +7,8 @@
     "@types/bun": "latest",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/helmet": "^4.0.0",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^24.3.0"
   },
   "peerDependencies": {
@@ -16,16 +18,16 @@
     "dev": "bun run src/index.ts"
   },
   "dependencies": {
-    "@clerk/express": "^1.7.26",
     "@prisma/client": "^6.15.0",
     "@types/node-cron": "^3.0.11",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "hono": "^4.9.5",
+    "helmet": "^8.1.0",
+    "morgan": "^1.10.1",
     "node-appwrite": "^18.0.0",
     "node-cron": "^4.2.1",
     "prisma": "^6.15.0",
-    "zod": "^4.1.5"
+    "zod": "3.23.8"
   }
 }
