--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@workspace/ui": "workspace:*",
     "appwrite": "^18.0.0",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
